Added Czech translation, thanks to Jirka Vilim

--- a/src/kcheckgmail.desktop
+++ b/src/kcheckgmail.desktop
@@ -13,6 +13,7 @@ GenericName[it]=Notificatore di nuove email
 GenericName[hu]=Új email értesítő
 GenericName[es]=Notificador de correo nuevo
 GenericName[ca]=Nou notificador de correu
+GenericName[cs]=Hlídač nových emailů
 GenericName[ar]=منبه جديد بالبريد
 Comment=A Kicker applet to display how many email messages you have in your Gmail account.
 Comment[zh_CN]=Kicker面板显示你已经收到了多少邮件
@@ -25,6 +26,7 @@ Comment[fr]=Un applet kicker qui affiche le nombre de nouveaux messages sur un c
 Comment[es]=Mini aplicación que muestra el número de mensajes sin leer en una cuenta de Gmail.
 Comment[el]=Μία εφαρμογή Kicker που σας εμφανίζει τα νέα μηνύματα του Gmail λογαριασμού σας
 Comment[ca]=Mini aplicació que mostra el nombre de missatges sense llegir en un compte deGmail.
+Comment[cs]=Kicker aplet zobrazujicí počet nových emailů v GMail účtu.
 Comment[ar]=بريمج يبين عدد الرسائل الإلكترونية في حساب GMail التي لديك.
 Exec=kcheckgmail
 Icon=kcheckgmail
