--- a/po/Makefile.in
+++ b/po/Makefile.in
@@ -295,8 +295,8 @@ xdg_directorydir = @xdg_directorydir@
 xdg_menudir = @xdg_menudir@
 #>- POFILES = AUTO
 #>+ 2
-POFILES = es.po pt.po ru.po it.po et.po sv.po el.po pl.po sk.po ko.po de.po zh_CN.po hu.po ar.po tr.po pt_BR.po lt.po ca.po fr.po wa.po
-GMOFILES = es.gmo pt.gmo ru.gmo it.gmo et.gmo sv.gmo el.gmo pl.gmo sk.gmo ko.gmo de.gmo zh_CN.gmo hu.gmo ar.gmo tr.gmo pt_BR.gmo lt.gmo ca.gmo fr.gmo wa.gmo
+POFILES = es.po pt.po ru.po it.po et.po sv.po el.po pl.po sk.po ko.po de.po zh_CN.po hu.po ar.po tr.po pt_BR.po lt.po ca.po fr.po wa.po cs.po
+GMOFILES = es.gmo pt.gmo ru.gmo it.gmo et.gmo sv.gmo el.gmo pl.gmo sk.gmo ko.gmo de.gmo zh_CN.gmo hu.gmo ar.gmo tr.gmo pt_BR.gmo lt.gmo ca.gmo fr.gmo wa.gmo cs.gmo
 #>- all: all-am
 #>+ 1
 all: all-nls docs-am  all-am
@@ -495,7 +495,7 @@ uninstall-am:
 .NOEXPORT:
 
 #>+ 2
-KDE_DIST=zh_CN.po kcheckgmail.pot Makefile.in pt.po wa.po ru.po pt_BR.po ko.po sv.po hu.po ar.po lt.po de.po pl.po es.po et.po fr.po ca.po sk.po it.po Makefile.am el.po tr.po 
+KDE_DIST=zh_CN.po kcheckgmail.pot Makefile.in pt.po wa.po ru.po pt_BR.po ko.po sv.po hu.po ar.po lt.po de.po pl.po es.po et.po fr.po ca.po sk.po it.po Makefile.am el.po tr.po cs.po
 
 #>+ 61
 es.gmo: es.po
@@ -558,10 +558,13 @@ fr.gmo: fr.po
 wa.gmo: wa.po
 	rm -f wa.gmo; $(GMSGFMT) -o wa.gmo $(srcdir)/wa.po
 	test ! -f wa.gmo || touch wa.gmo
+cs.gmo: cs.po
+	rm -f cs.gmo; $(GMSGFMT) -o cs.gmo $(srcdir)/cs.po
+	test ! -f cs.gmo || touch cs.gmo
 
 #>+ 3
 clean-nls:
-	-rm -f  es.gmo pt.gmo ru.gmo it.gmo et.gmo sv.gmo el.gmo pl.gmo sk.gmo ko.gmo de.gmo zh_CN.gmo hu.gmo ar.gmo tr.gmo pt_BR.gmo lt.gmo ca.gmo fr.gmo wa.gmo
+	-rm -f  es.gmo pt.gmo ru.gmo it.gmo et.gmo sv.gmo el.gmo pl.gmo sk.gmo ko.gmo de.gmo zh_CN.gmo hu.gmo ar.gmo tr.gmo pt_BR.gmo lt.gmo ca.gmo fr.gmo wa.gmo cs.gmo
 
 #>+ 10
 install-nls:
@@ -596,6 +599,7 @@ uninstall-nls:
 	rm -f $(DESTDIR)$(kde_locale)/ca/LC_MESSAGES/$(PACKAGE).mo
 	rm -f $(DESTDIR)$(kde_locale)/fr/LC_MESSAGES/$(PACKAGE).mo
 	rm -f $(DESTDIR)$(kde_locale)/wa/LC_MESSAGES/$(PACKAGE).mo
+	rm -f $(DESTDIR)$(kde_locale)/cs/LC_MESSAGES/$(PACKAGE).mo
 
 #>+ 2
 all-nls: $(GMOFILES)
