Added Czech translation, thanks to Jirka Vilim

--- a/src/kcheckgmail.desktop
+++ b/src/kcheckgmail.desktop
@@ -9,6 +9,7 @@ GenericName[pl]=Powiadomienia o nowej poczcie
 GenericName[lt]=Naujo el. pašto pranešiklis
 GenericName[it]=Notificatore di nuove email
 GenericName[es]=Notificador de correo nuevo
+GenericName[cs]=Hlídač nových emailů
 GenericName[ar]=منبه جديد بالبريد
 Comment=A Kicker applet to display how many email messages you have in your Gmail account.
 Comment[tr]=Gmail hesabınızda kaç tane yeni e-posta olduğunu gösteren bir panel programcığıdır.
@@ -17,6 +18,7 @@ Comment[pl]=Aplet panelu do pokazywania zawartości Twojej skrzynki pocztowej Gm
 Comment[it]=Un'applet di Kicker per visualizzare quanti messaggi di posta elettronica sono presenti nel tuo account di Gmail.
 Comment[fr]=Un applet kicker qui affiche le nombre de nouveaux messages sur un compte Gmail.
 Comment[es]=Mini aplicación que muestra el número de mensajes sin leer en una cuenta de Gmail.
+Comment[cs]=Kicker aplet zobrazujicí počet nových emailů v GMail účtu.
 Comment[ar]=بريمج يبين عدد الرسائل الإلكترونية في حساب GMail التي لديك.
 Exec=kcheckgmail
 Icon=kcheckgmail
