--- a/src/kcheckgmail.desktop
+++ b/src/kcheckgmail.desktop
@@ -12,6 +12,7 @@ GenericName[lt]=Naujo el. pašto pranešiklis
 GenericName[it]=Notificatore di nuove email
 GenericName[hu]=Új email értesítő
 GenericName[es]=Notificador de correo nuevo
+GenericName[cs]=Hlídač nových emailů
 GenericName[ca]=Nou notificador de correu
 GenericName[ar]=منبه جديد بالبريد
 Comment=A Kicker applet to display how many email messages you have in your Gmail account.
@@ -24,6 +25,7 @@ Comment[hu]=Egy Kicker alkalmazás, amely jelzi, hogy hány email van a GMail fi
 Comment[fr]=Un applet kicker qui affiche le nombre de nouveaux messages sur un compte Gmail.
 Comment[es]=Mini aplicación que muestra el número de mensajes sin leer en una cuenta de Gmail.
 Comment[el]=Μία εφαρμογή Kicker που σας εμφανίζει τα νέα μηνύματα του Gmail λογαριασμού σας
+Comment[cs]=Kicker aplet zobrazujicí počet nových emailů v GMail účtu.
 Comment[ca]=Mini aplicació que mostra el nombre de missatges sense llegir en un compte deGmail.
 Comment[ar]=بريمج يبين عدد الرسائل الإلكترونية في حساب GMail التي لديك.
 Exec=kcheckgmail
