--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: kde
 Priority: optional
 Maintainer: Debian KDE Extras Team <pkg-kde-extras@lists.alioth.debian.org>
 Uploaders: Raphael Geissert <atomo64@gmail.com>
-Build-Depends: debhelper (>= 5), autotools-dev, kdelibs4-dev, libqt3-mt-dev, autoconf
+Build-Depends: cdbs, debhelper (>= 5), autotools-dev, kdelibs4-dev, libqt3-mt-dev, autoconf
 Standards-Version: 3.7.3
 Homepage: http://kcheckgmail.sourceforge.net/
 Vcs-Git:    git://git.debian.org/git/pkg-kde/kde-extras/kcheckgmail.git
