--- a/src/kcheckgmail.desktop
+++ b/src/kcheckgmail.desktop
@@ -1,24 +1,32 @@
 [Desktop Entry]
 Name=KCheckGMail
+Name[zh_CN]=KCheckGmail
 Name[tr]=KCheckGmail
 GenericName=New email notifier
+GenericName[zh_CN]=新邮件提示
 GenericName[wa]=Notifieu d' noveas emiles
 GenericName[tr]=Yeni E-posta Bildiricisi
 GenericName[pt]=Notificador de mensagens novas
 GenericName[pl]=Powiadomienia o nowej poczcie
 GenericName[lt]=Naujo el. pašto pranešiklis
 GenericName[it]=Notificatore di nuove email
+GenericName[hu]=Új email értesítő
 GenericName[es]=Notificador de correo nuevo
 GenericName[cs]=Hlídač nových emailů
+GenericName[ca]=Nou notificador de correu
 GenericName[ar]=منبه جديد بالبريد
 Comment=A Kicker applet to display how many email messages you have in your Gmail account.
+Comment[zh_CN]=Kicker面板显示你已经收到了多少邮件
 Comment[tr]=Gmail hesabınızda kaç tane yeni e-posta olduğunu gösteren bir panel programcığıdır.
 Comment[pt]=Uma 'applet' que inicia uma aplicação que mostra quantas mensagens por ler tem na sua conta Gmail.
 Comment[pl]=Aplet panelu do pokazywania zawartości Twojej skrzynki pocztowej Gmail
 Comment[it]=Un'applet di Kicker per visualizzare quanti messaggi di posta elettronica sono presenti nel tuo account di Gmail.
+Comment[hu]=Egy Kicker alkalmazás, amely jelzi, hogy hány email van a GMail fiókjában.
 Comment[fr]=Un applet kicker qui affiche le nombre de nouveaux messages sur un compte Gmail.
 Comment[es]=Mini aplicación que muestra el número de mensajes sin leer en una cuenta de Gmail.
+Comment[el]=Μία εφαρμογή Kicker που σας εμφανίζει τα νέα μηνύματα του Gmail λογαριασμού σας
 Comment[cs]=Kicker aplet zobrazujicí počet nových emailů v GMail účtu.
+Comment[ca]=Mini aplicació que mostra el nombre de missatges sense llegir en un compte deGmail.
 Comment[ar]=بريمج يبين عدد الرسائل الإلكترونية في حساب GMail التي لديك.
 Exec=kcheckgmail
 Icon=kcheckgmail
