--- a/src/kcheckgmail.desktop
+++ b/src/kcheckgmail.desktop
@@ -32,4 +32,4 @@ Exec=kcheckgmail
 Icon=kcheckgmail
 X-KDE-StartupNotify=true
 Type=Application
-Categories=Qt;KDE;Network
+Categories=Qt;KDE;Network;
