--- a/Makefile.in
+++ b/Makefile.in
@@ -353,29 +353,29 @@ $(srcdir)/Makefile.in: @MAINTAINER_MODE_TRUE@ $(srcdir)/Makefile.am  $(am__confi
 #>- 	@for dep in $?; do \
 #>- 	  case '$(am__configure_deps)' in \
 #>- 	    *$$dep*) \
-#>- 	      echo ' cd $(srcdir) && $(AUTOMAKE) --gnu '; \
-#>- 	      cd $(srcdir) && $(AUTOMAKE) --gnu  \
+#>- 	      echo ' cd $(srcdir) && $(AUTOMAKE) --foreign '; \
+#>- 	      cd $(srcdir) && $(AUTOMAKE) --foreign  \
 #>- 		&& exit 0; \
 #>- 	      exit 1;; \
 #>- 	  esac; \
 #>- 	done; \
-#>- 	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu  Makefile'; \
+#>- 	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign  Makefile'; \
 #>- 	cd $(top_srcdir) && \
-#>- 	  $(AUTOMAKE) --gnu  Makefile
+#>- 	  $(AUTOMAKE) --foreign  Makefile
 #>+ 14
 	@for dep in $?; do \
 	  case '$(am__configure_deps)' in \
 	    *$$dep*) \
-	      echo ' cd $(srcdir) && $(AUTOMAKE) --gnu '; \
+	      echo ' cd $(srcdir) && $(AUTOMAKE) --foreign '; \
  (  \
-	      cd $(srcdir) && $(AUTOMAKE) --gnu  \
+	      cd $(srcdir) && $(AUTOMAKE) --foreign  \
 	 ) || exit 1; echo ' cd $(top_srcdir) && perl admin/am_edit '; cd $(top_srcdir) && perl admin/am_edit && exit 0;  \
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu  Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign  Makefile'; \
 	cd $(top_srcdir) && \
-	  $(AUTOMAKE) --gnu  Makefile
+	  $(AUTOMAKE) --foreign  Makefile
 	cd $(top_srcdir) && perl admin/am_edit Makefile.in
 .PRECIOUS: Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
@@ -877,8 +877,30 @@ dist-hook:
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
 
+clean-bcheck: 
+	rm -f *.bchecktest.cc *.bchecktest.cc.class a.out
+
+bcheck: bcheck-recursive
+
+bcheck-am:
+	@for i in ; do \
+	    if test $(srcdir)/$$i -nt $$i.bchecktest.cc; then \
+	        echo "int main() {return 0;}" > $$i.bchecktest.cc ; \
+	        echo "#include \"$$i\"" >> $$i.bchecktest.cc ; \
+	        echo "$$i"; \
+	        if ! $(CXX) $(DEFS) -I. -I$(srcdir) -I$(top_builddir) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(CXXFLAGS) $(KDE_CXXFLAGS)  --dump-class-hierarchy -c $$i.bchecktest.cc; then \
+	            rm -f $$i.bchecktest.cc; exit 1; \
+	        fi ; \
+	        echo "" >> $$i.bchecktest.cc.class; \
+	        perl $(top_srcdir)/admin/bcheck.pl $$i.bchecktest.cc.class || { rm -f $$i.bchecktest.cc; exit 1; }; \
+	        rm -f a.out; \
+	    fi ; \
+	done
+
+
+
 #>+ 2
-KDE_DIST=cvs2cl.pl stamp-h.in kcheckgmail.kdevelop.pcs subdirs Makefile.in configure.files kcheckgmail.1 config.h.in kcheckgmail.kdevses configure.in Makefile.cvs aclocal.m4 Doxyfile kcheckgmail.kdevelop acinclude.m4 Makefile.am configure 
+KDE_DIST=cvs2cl.pl stamp-h.in subdirs Makefile.in configure.files kcheckgmail.1 config.h.in configure.in Makefile.cvs aclocal.m4 Doxyfile kcheckgmail.kdevelop acinclude.m4 Makefile.am configure 
 
 #>+ 2
 docs-am:
@@ -886,7 +908,7 @@ docs-am:
 #>+ 7
 force-reedit:
 	 \
-	      cd $(srcdir) && $(AUTOMAKE) --gnu  \
+	      cd $(srcdir) && $(AUTOMAKE) --foreign  \
 	
 	cd $(top_srcdir) && perl admin/am_edit Makefile.in
 
