--- a/icons/Makefile.in
+++ b/icons/Makefile.in
@@ -316,9 +316,9 @@ $(srcdir)/Makefile.in: @MAINTAINER_MODE_TRUE@ $(srcdir)/Makefile.am  $(am__confi
 #>- 	      exit 1;; \
 #>- 	  esac; \
 #>- 	done; \
-#>- 	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu  icons/Makefile'; \
+#>- 	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign  icons/Makefile'; \
 #>- 	cd $(top_srcdir) && \
-#>- 	  $(AUTOMAKE) --gnu  icons/Makefile
+#>- 	  $(AUTOMAKE) --foreign  icons/Makefile
 #>+ 12
 	@for dep in $?; do \
 	  case '$(am__configure_deps)' in \
@@ -328,9 +328,9 @@ $(srcdir)/Makefile.in: @MAINTAINER_MODE_TRUE@ $(srcdir)/Makefile.am  $(am__confi
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu  icons/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign  icons/Makefile'; \
 	cd $(top_srcdir) && \
-	  $(AUTOMAKE) --gnu  icons/Makefile
+	  $(AUTOMAKE) --foreign  icons/Makefile
 	cd $(top_srcdir) && perl admin/am_edit icons/Makefile.in
 .PRECIOUS: Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
@@ -489,6 +489,7 @@ uninstall-am: uninstall-kde-icons  uninstall-info-am
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
 
+
 #>+ 2
 KDE_DIST=cr128-app-kcheckgmail.png Makefile.in cr32-app-kcheckgmail.png cr22-app-kcheckgmail.png cr16-app-kcheckgmail.png cr48-app-kcheckgmail.png cr64-app-kcheckgmail.png Makefile.am 
 
@@ -546,9 +547,9 @@ force-reedit:
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu  icons/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign  icons/Makefile'; \
 	cd $(top_srcdir) && \
-	  $(AUTOMAKE) --gnu  icons/Makefile
+	  $(AUTOMAKE) --foreign  icons/Makefile
 	cd $(top_srcdir) && perl admin/am_edit icons/Makefile.in
 
 
