Color chooser for the number of unread emails.
Commit 02571167d3dfe3f0ff46c06a298f143c77a89ba5 changed the color from
black to blue. The idea was (is) to match Akregator and KMail.

First time users get blue as default, all others get black.

Signed-off-by: Luís Pereira <luis.artur.pereira@gmail.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,10 +2,11 @@ INCLUDES = $(all_includes)
 
 bin_PROGRAMS = kcheckgmail
 
-kcheckgmail_SOURCES = advancedsettingswidget.ui appletsettingswidget.ui \
-	configdialog.cpp gmail.cpp gmailparser.cpp gmailwalletmanager.cpp jsprotocol.cpp \
-	kcheckgmailapp.cpp kcheckgmailcore.cpp kcheckgmailiface.skel kcheckgmailtray.cpp \
-	loginsettingswidget.ui mailcounter.cpp main.cpp netsettingswidget.ui prefs.kcfgc
+kcheckgmail_SOURCES = advancedsettingswidget.ui appearancesettingswidget.ui \
+	appletsettingswidget.ui configdialog.cpp gmail.cpp gmailparser.cpp gmailwalletmanager.cpp \
+	jsprotocol.cpp kcheckgmailapp.cpp kcheckgmailcore.cpp kcheckgmailiface.skel \
+	kcheckgmailtray.cpp loginsettingswidget.ui mailcounter.cpp main.cpp netsettingswidget.ui \
+	prefs.kcfgc
 kcheckgmail_LDFLAGS = $(KDE_PLUGIN) $(all_libraries)
 kcheckgmail_LDADD = $(LIB_KDEUI) $(LIB_KIO) -lkwalletclient
 
