Added Danish translation, thanks to Christian Damsgaard

--- a/src/kcheckgmail.desktop
+++ b/src/kcheckgmail.desktop
@@ -12,6 +12,8 @@ GenericName[lt]=Naujo el. pašto pranešiklis
 GenericName[it]=Notificatore di nuove email
 GenericName[hu]=Új email értesítő
 GenericName[es]=Notificador de correo nuevo
+GenericName[da]=Ny e-mail meddelse
+GenericName[cs]=Hlídač nových emailů
 GenericName[ca]=Nou notificador de correu
 GenericName[cs]=Hlídač nových emailů
 GenericName[ar]=منبه جديد بالبريد
@@ -25,6 +27,8 @@ Comment[hu]=Egy Kicker alkalmazás, amely jelzi, hogy hány email van a GMail fi
 Comment[fr]=Un applet kicker qui affiche le nombre de nouveaux messages sur un compte Gmail.
 Comment[es]=Mini aplicación que muestra el número de mensajes sin leer en una cuenta de Gmail.
 Comment[el]=Μία εφαρμογή Kicker που σας εμφανίζει τα νέα μηνύματα του Gmail λογαριασμού σας
+Comment[da]=En lille program til Statusfeltet, der viser hvormange e-mails du har på din Gmail konto.
+Comment[cs]=Kicker aplet zobrazujicí počet nových emailů v GMail účtu.
 Comment[ca]=Mini aplicació que mostra el nombre de missatges sense llegir en un compte deGmail.
 Comment[cs]=Kicker aplet zobrazujicí počet nových emailů v GMail účtu.
 Comment[ar]=بريمج يبين عدد الرسائل الإلكترونية في حساب GMail التي لديك.
