--- a/po/Makefile.in
+++ b/po/Makefile.in
@@ -295,8 +295,8 @@ xdg_directorydir = @xdg_directorydir@
 xdg_menudir = @xdg_menudir@
 #>- POFILES = AUTO
 #>+ 2
-POFILES = es.po pt.po ru.po it.po et.po sv.po el.po pl.po sk.po ko.po de.po zh_CN.po hu.po ar.po tr.po pt_BR.po lt.po ca.po fr.po wa.po cs.po
-GMOFILES = es.gmo pt.gmo ru.gmo it.gmo et.gmo sv.gmo el.gmo pl.gmo sk.gmo ko.gmo de.gmo zh_CN.gmo hu.gmo ar.gmo tr.gmo pt_BR.gmo lt.gmo ca.gmo fr.gmo wa.gmo cs.gmo
+POFILES = es.po pt.po ru.po it.po et.po sv.po el.po pl.po sk.po ko.po de.po cs.po zh_CN.po hu.po ar.po tr.po pt_BR.po lt.po ca.po fr.po wa.po da.po
+GMOFILES = es.gmo pt.gmo ru.gmo it.gmo et.gmo sv.gmo el.gmo pl.gmo sk.gmo ko.gmo de.gmo cs.gmo zh_CN.gmo hu.gmo ar.gmo tr.gmo pt_BR.gmo lt.gmo ca.gmo fr.gmo wa.gmo da.gmo
 #>- all: all-am
 #>+ 1
 all: all-nls docs-am  all-am
@@ -495,7 +495,7 @@ uninstall-am:
 .NOEXPORT:
 
 #>+ 2
-KDE_DIST=zh_CN.po kcheckgmail.pot Makefile.in pt.po wa.po ru.po pt_BR.po ko.po sv.po hu.po ar.po lt.po de.po pl.po es.po et.po fr.po ca.po sk.po it.po Makefile.am el.po tr.po cs.po
+KDE_DIST=zh_CN.po kcheckgmail.pot Makefile.in pt.po wa.po ru.po pt_BR.po ko.po sv.po hu.po ar.po lt.po de.po pl.po es.po et.po fr.po ca.po sk.po it.po Makefile.am el.po tr.po da.po
 
 #>+ 61
 es.gmo: es.po
@@ -562,13 +562,17 @@ cs.gmo: cs.po
 	rm -f cs.gmo; $(GMSGFMT) -o cs.gmo $(srcdir)/cs.po
 	test ! -f cs.gmo || touch cs.gmo
 
+da.gmo: da.po
+	rm -f da.gmo; $(GMSGFMT) -o da.gmo $(srcdir)/da.po
+	test ! -f da.gmo || touch da.gmo
+
 #>+ 3
 clean-nls:
-	-rm -f  es.gmo pt.gmo ru.gmo it.gmo et.gmo sv.gmo el.gmo pl.gmo sk.gmo ko.gmo de.gmo zh_CN.gmo hu.gmo ar.gmo tr.gmo pt_BR.gmo lt.gmo ca.gmo fr.gmo wa.gmo cs.gmo
+	-rm -f  es.gmo pt.gmo ru.gmo it.gmo et.gmo sv.gmo el.gmo pl.gmo sk.gmo ko.gmo de.gmo cs.gmo zh_CN.gmo hu.gmo ar.gmo tr.gmo pt_BR.gmo lt.gmo ca.gmo fr.gmo wa.gmo da.gmo
 
 #>+ 10
 install-nls:
-	@for base in es pt ru it et sv el pl sk ko de zh_CN hu ar tr pt_BR lt ca fr wa ; do \
+	@for base in es pt ru it et sv el pl sk ko de cs zh_CN hu ar tr pt_BR lt ca fr wa da ; do \
 	  echo $(INSTALL_DATA) $$base.gmo $(DESTDIR)$(kde_locale)/$$base/LC_MESSAGES/$(PACKAGE).mo ;\
 	  $(mkinstalldirs) $(DESTDIR)$(kde_locale)/$$base/LC_MESSAGES ; \
 	  if test -f $$base.gmo; then $(INSTALL_DATA) $$base.gmo $(DESTDIR)$(kde_locale)/$$base/LC_MESSAGES/$(PACKAGE).mo ;\
@@ -600,6 +604,7 @@ uninstall-nls:
 	rm -f $(DESTDIR)$(kde_locale)/fr/LC_MESSAGES/$(PACKAGE).mo
 	rm -f $(DESTDIR)$(kde_locale)/wa/LC_MESSAGES/$(PACKAGE).mo
 	rm -f $(DESTDIR)$(kde_locale)/cs/LC_MESSAGES/$(PACKAGE).mo
+	rm -f $(DESTDIR)$(kde_locale)/da/LC_MESSAGES/$(PACKAGE).mo
 
 #>+ 2
 all-nls: $(GMOFILES)
